// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reindex_catalog.sql > line 27 1`] = `
[
  "REINDEX TABLE pg_class",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 14,
              "relname": "pg_class",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 27 2`] = `
[
  " -- mapped, non-shared, critical
REINDEX TABLE pg_index",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 47,
              "relname": "pg_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 28 1`] = `
[
  " -- non-mapped, non-shared, critical
REINDEX TABLE pg_operator",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 51,
              "relname": "pg_operator",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 29 1`] = `
[
  " -- non-mapped, non-shared, critical
REINDEX TABLE pg_database",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 51,
              "relname": "pg_database",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 30 1`] = `
[
  " -- mapped, shared, critical
REINDEX TABLE pg_shdescription",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 43,
              "relname": "pg_shdescription",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 31 1`] = `
[
  " -- mapped, shared non-critical

-- Check that individual system indexes can be reindexed. That's a bit
-- different from the entire-table case because reindex_relation
-- treats e.g. pg_class special.
REINDEX INDEX pg_class_oid_index",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 216,
              "relname": "pg_class_oid_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 36 1`] = `
[
  " -- mapped, non-shared, critical
REINDEX INDEX pg_class_relname_nsp_index",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 47,
              "relname": "pg_class_relname_nsp_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 37 1`] = `
[
  " -- mapped, non-shared, non-critical
REINDEX INDEX pg_index_indexrelid_index",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 51,
              "relname": "pg_index_indexrelid_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 38 1`] = `
[
  " -- non-mapped, non-shared, critical
REINDEX INDEX pg_index_indrelid_index",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 51,
              "relname": "pg_index_indrelid_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 39 1`] = `
[
  " -- non-mapped, non-shared, non-critical
REINDEX INDEX pg_database_oid_index",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 55,
              "relname": "pg_database_oid_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 40 1`] = `
[
  " -- mapped, shared, critical
REINDEX INDEX pg_shdescription_o_c_index",
  {
    "stmts": [
      {
        "stmt": {
          "ReindexStmt": {
            "kind": "REINDEX_OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 43,
              "relname": "pg_shdescription_o_c_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 41 1`] = `
[
  " -- mapped, shared, non-critical

-- Check the same REINDEX INDEX statements under parallelism.
BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`reindex_catalog.sql > line 51 1`] = `
[
  " -- mapped, shared, non-critical
ROLLBACK",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
